[package]
name = "rustsym"
version = "0.3.1"
description = "Tool to query symbols from rust code for use in IDEs"
authors = ["Trixnz"]
repository = "https://github.com/trixnz/rustsym"
readme = "README.md"
license = "MIT"

[dependencies]
syntex_syntax = "0.58"
serde = "1"
serde_derive = "1"
serde_json = "1"
clap = "2"
walkdir = "1"
syncbox = "0.2.4"
num_cpus = "1"

[dev-dependencies]
tempfile = "2"
